[gd_scene load_steps=4 format=3 uid="uid://cwt3noaoopfa4"]

[ext_resource type="Script" path="res://Scripts/Character.gd" id="1_fwvld"]
[ext_resource type="Texture2D" uid="uid://dbfnm1iklq3pd" path="res://Assets/Player.png" id="1_rjclm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gx1lq"]
size = Vector2(16, 32)

[node name="Node2D" type="CharacterBody2D"]
script = ExtResource("1_fwvld")
dialogue = "res://Dialogues/Bug Game Pilot.txt"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rjclm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gx1lq")

[node name="DialogueBox" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="Panel" parent="DialogueBox"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueBox/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="DialogueBox/Panel/VBoxContainer"]
layout_mode = 2
autowrap_mode = 2

[node name="Option1" type="Button" parent="DialogueBox/Panel/VBoxContainer"]
layout_mode = 2

[node name="Option2" type="Button" parent="DialogueBox/Panel/VBoxContainer"]
layout_mode = 2

[node name="Option3" type="Button" parent="DialogueBox/Panel/VBoxContainer"]
layout_mode = 2
